# TicTacToe

./: CMakeLists.txt  loadSetting.cpp  loadSetting.hpp  main.cpp  print.cpp  print.hpp  saveSetting.cpp  saveSetting.hpp  saveToHistory.cpp  saveToHistory.hpp  showHistory.cpp  showHistory.hpp  startGame.cpp  startGame.hpp  winner.cpp  winner.hpp
.github/workflows/: ci-configuration.yml
